--- a/index.html
+++ b/index.html
@@ -45,10 +45,18 @@
               <a href="#">ROOM</a>
               <ul>
                 <li><a href="roombig.html">3층형 대형독채</a></li>
-                <li><a href="room1.html">나홀로 돔 독채</a></li>
+                <li><a href="#">2층형 나홀로 돔 독채</a></li>
                 <li>
-                  <a href="room2.html">단층형 독채</a>
-                </li>
+                  <a href="#">단층형 독채</a>
+                  <!--
+                  <ul>
+                    <li><a href="#">웰던</a></li>
+                    <li><a href="#">미디엄웰던</a></li>
+                    <li><a href="#">퍼스트</a></li>
+                    <li><a href="#">미디엄</a></li>
+                    <li><a href="#">라스트</a></li>
+                  </ul>
+                --></li>
               </ul>
             </li>
             <li><a href="left-sidebar.html">Left Sidebar</a></li>
@@ -91,7 +99,10 @@
             <header>
               <h3><a href="#">밤의 추억, 불멍</a></h3>
             </header>
-            <p>사랑하는 사람과 오로라빛 불을 바라보며 추억을 쌓으세요.</p>
+            <p>
+              밤하늘 아래, 사랑하는 사람과 오로라 빛 불을 바라보며 추억을
+              쌓으세요.
+            </p>
           </article>
 
           <article>
@@ -99,7 +110,7 @@
               ><img src="images/pic03.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">여름, 수영장, 물총</a></h3>
+              <h3><a href="#">여름에는 물놀이, 수영장과 물총</a></h3>
             </header>
             <p>뷰를 즐기며 시원한 물놀이를 즐길 수 있습니다.</p>
           </article>
@@ -129,7 +140,7 @@
               ><img src="images/pic02_2.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">아름다운 겨울 설원</a></h3>
+              <h3><a href="#">겨울에는 하얗게 아름다운 곳</a></h3>
             </header>
             <p>산은 다채롭고, 푸릇하고, 붉고, 하얀 빛으로 아름답습니다.</p>
           </article>
@@ -149,7 +160,7 @@
               ><img src="images/pic03_3.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">별빛과 조명의 빛</a></h3>
+              <h3><a href="#">별빛과 조명의 빛t</a></h3>
             </header>
             <p>별빛과 조명의 빛이 손님의 밤을 아름답게 빛낼 수 있도록.</p>
           </article>
