--- a/roombig.html
+++ b/roombig.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+	Helios by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
   <head>
     <title>TheFillU-Room</title>
@@ -133,7 +138,7 @@
                 <h3>예약 안내</h3>
               </header>
               <p>
-                - 전화 혹은 네이버 플레이스를 통해 예약 가능합니다.<br>
+                - 대형 독채는 현재 예약이 불가합니다.<br>
 				- 예약하신 분과 입금하신 분이 다른 경우 안내전화로 연락주시기 바랍니다. 사정상 객실요금 입금이 지연될 경우, 안내전화로 연락주시면 상담 후 조치해 드립니다. 예약후 전액 입금하셔야 예약이 완료되며 12시간이 지나면 자동 취소됩니다.<br>
 				- 기준인원 초과 시 1인당 25,000원(초등학생~영유아 10,000)이 추가됩니다.<br>
 				- 성수기 기간안내 : 실시간예약을 참고해주세요.<br>
@@ -163,7 +168,7 @@
                 ><img src="images/pic07.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">여기서 무슨 말 할까</a></h3>
+                <h3><a href="#">Gravida aliquam penatibus</a></h3>
               </header>
               <p>
                 Amet nullam fringilla nibh nulla convallis tique ante proin
@@ -177,7 +182,7 @@
                 ><img src="images/pic08.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">무슨 사진 무슨 말</a></h3>
+                <h3><a href="#">Sed quis rhoncus placerat</a></h3>
               </header>
               <p>
                 Amet nullam fringilla nibh nulla convallis tique ante proin
@@ -191,7 +196,7 @@
                 ><img src="images/pic09.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">무슨 사진 무슨 말</a></h3>
+                <h3><a href="#">Magna laoreet et aliquam</a></h3>
               </header>
               <p>
                 Amet nullam fringilla nibh nulla convallis tique ante proin
@@ -207,8 +212,8 @@
       <!-- Footer -->
       <div id="footer">
         <div class="container">
-          <!--문서/사진
           <div class="row">
+            <!-- Tweets -->
             <section class="col-4 col-12-mobile">
               <header>
                 <h2 class="icon brands fa-twitter circled">
@@ -245,6 +250,8 @@
                 </li>
               </ul>
             </section>
+
+            <!-- Posts -->
             <section class="col-4 col-12-mobile">
               <header>
                 <h2 class="icon solid fa-file circled">
@@ -287,7 +294,7 @@
               </ul>
             </section>
 
-            
+            <!-- Photos -->
             <section class="col-4 col-12-mobile">
               <header>
                 <h2 class="icon solid fa-camera circled">
@@ -328,19 +335,17 @@
               </div>
             </section>
           </div>
-        -->
-
           <hr />
           <div class="row">
             <div class="col-12">
               <!-- Contact -->
               <section class="contact">
                 <header>
-                  <h3>TheFillU Pension</h3>
+                  <h3>Nisl turpis nascetur interdum?</h3>
                 </header>
                 <p>
-                  문의 사항이 있으시다면 언제든 하단에 있는 번호로 문의
-                  부탁드립니다.
+                  Urna nisl non quis interdum mus ornare ridiculus egestas
+                  ridiculus lobortis vivamus tempor aliquet.
                 </p>
                 <ul class="icons">
                   <li>
@@ -379,13 +384,7 @@
               <!-- Copyright -->
               <div class="copyright">
                 <ul class="menu">
-                  <li>TheFillU(더필유) : 강원 춘천시 남면 박암관천길 352</li>
-                  <li>대표자 : 김남예</li>
-                  <li>사업자등록번호 : 107-34-61735</li>
-                  <li>예약문의 : 010-9796-2432</li>
-                  <li>국민 30120104410941 (예금주 김남예)</li>
-                  <li>*예약자명과 입금자명이 다를 경우 펜션으로 연락주세요</li>
-                  <li>&copy; TheFillU. All rights reserved.</li>
+                  <li>&copy; Untitled. All rights reserved.</li>
                   <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                 </ul>
               </div>
